fix taxonomy: rename .collapse to .taxo-detail to avoid Bootstrap conflict
Bootstrap 4/5 hides all elements with class .collapse by default which
was preventing the translation detail toggle button from being visible
and functional.

--- a/src/main/webapp/modules/taxonomy/css/taxonomy.scss
+++ b/src/main/webapp/modules/taxonomy/css/taxonomy.scss
@@ -87,10 +87,10 @@
 }
 
 /* Translation detail toggle +/- visibility */
-.collapse .action.open .bi-plus-circle {
+.taxo-detail .action.open .bi-plus-circle {
 	display: none;
 }
-.collapse .action.close .bi-dash-circle {
+.taxo-detail .action.close .bi-dash-circle {
 	display: none;
 }
 
